[project]
name = "my-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=8.0.4",
    "ipython>=9.3.0",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.22",
    "langgraph>=0.4.8",
    "openai>=1.86.0",
]
